# scheduling_tauri

./: .eslintrc.json  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: release.yml
.storybook/: main.ts  preview.ts
src-tauri/: .gitignore  Cargo.toml  README.md  package.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/prisma/: schema.prisma  seed.sh
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20231119220015_init/: migration.sql
src-tauri/seed/: Cargo.toml
src-tauri/seed/src/: main.rs
src-tauri/src/: lib.rs  main.rs  menu.rs  router.rs
src-tauri/src/router/: shift_date.rs  shift_type.rs  user.rs
src/app/: layout.tsx  page.tsx
src/app/calendar/: page.tsx
src/app/shifttypes/: page.tsx
src/app/users/: page.tsx
src/components/ui/DeletableChip/: deletableChip.stories.tsx  deletableChip.tsx  index.ts
src/components/ui/Loading/: loading.stories.tsx  loading.tsx
src/components/ui/MonthPicker/: index.ts  monthPicker.stories.tsx  monthPicker.tsx
src/components/ui/TitledModal/: index.ts  titledModal.stories.tsx  titledModal.tsx
src/features/Calendar/: index.tsx
src/features/Calendar/api/: deleteShiftDate.ts  getShiftDates.ts  getShiftTypes.ts  upsertShiftDate.ts
src/features/Calendar/components/: calendar.stories.tsx  calendar.tsx  calendarTable.tsx  registerShiftDate.tsx
src/features/Calendar/hooks/: useCalendar.ts
src/features/Calendar/lib/: getCalendarMatrix.ts
src/features/Calendar/types/: index.ts
src/features/Scheduler/: index.tsx
src/features/Scheduler/api/: getUsers.ts
src/features/Scheduler/components/: scheduler.stories.tsx  scheduler.tsx  schedulerTable.tsx
src/features/Scheduler/hooks/: useScheduler.ts
src/features/ShiftTypeEditor/: index.tsx
src/features/UserEditor/: index.tsx
src/hooks/: useWindowMenuListen.tsx
src/lib/: rspc.tsx  rspcProvider.tsx
src/styles/: globals.css
src/types/: shiftDate.ts  shiftType.ts
src/utils/: dayColor.ts  getContrastText.ts
(+21 files in other folders)
