[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["P-SiZK"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = [
  "rspc",
  "specta",
  "migrations",
  "sqlite",
  "sqlite-create-many",
  "mocking",
] }
rspc = { version = "0.1.3", features = ["tauri", "chrono", "uuid"] }
tokio = { version = "1.33.0", features = ["macros"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Todo: if opt-level is greater than 1, release build will fail.
opt-level = 1

[workspace]
members = ["prisma-cli", "seed"]
resolver = "2"
