[package]
name = "seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = [
  "rspc",
  "specta",
  "migrations",
  "sqlite",
  "sqlite-create-many",
  "mocking",
] }
tokio = { version = "1.33.0", features = ["macros"] }
fake = { version = "2.9.1", features = ["chrono", "random_color"] }
rand = "0.8.5"
app = { path = "../" }
